# minix

./: .gitignore  .gitreview  LICENSE  Makefile  Makefile.inc  README.md  build.sh  conflicts  dotest.sh  groups  project.config
Minix 3/: README.md
VMware/: README.md
benchmarks/: Makefile  run
benchmarks/unixbench-5.1.2/: Makefile  Makefile.inc  Run  WRITING_TESTS  run.sh
boot/: Makefile  a.out2com  addaout.c  boot.c  boot.h  bootblock.s  bootcdhead.s  boothead.s  bootimage.c  doshead.s  image.h  installboot.c  minix.ack16.mk  mkfhead.s  mkfile.c  rawfs.c  rawfs.h  updateboot.sh
boot/boot/: Makefile  boot.c  boothead.s  bootimage.c  emem.h
boot/bootblock/: Makefile
boot/cdbootblock/: Makefile
boot/edparams/: Makefile
boot/installboot/: Makefile  installboot.c
commands/: Makefile  Makefile.inc  bigmake.inc
commands/at/: at.c  (+1 more)
common/: Makefile
contrib/: Makefile
crypto/: Makefile.openssl  TODO
distrib/: Makefile  Makefile.inc
docs/: UPDATING  profiling.txt
drivers/: Makefile  Makefile.inc  drivers.h
etc/: Makefile  Makefile.params  binary_sizes  binary_sizes.big  binary_sizes.xxl  boot.cfg.default  chmem.sh  crontab  csh.cshrc  csh.login  csh.logout  descr  drivers.conf  fstab  fstab.local  gettytab  group  hostname.file  hosts  inet.conf  inetd.conf  issue  make.conf  man.conf  master.passwd  minix.rc.conf  mk.conf  motd  motd.install  mtree.sh  named.conf  newfstab.sh  nsswitch.conf  passwd  passwd.conf  pkgsrc.conf  profile  protocols  rc  rc.cd  (+22 more)
games/: Makefile  Makefile.inc
gnu/: Makefile  README
include/: Makefile  Makefile.minix.inc  a.out.h  aio.h  alloca.h  ansi.h  ar.h  assert.h  bitstring.h  bm.h  cdbw.h  complex.h  ctype.h  curses.h  db.h  dirent.h  dlfcn.h  env.h  err.h  errno.h  fcntl.h  fenv.h  float.h  fnmatch.h  fstab.h  fts.h  ftw.h  getopt.h  glob.h  globalme.h  grp.h  hesiod.h  hgfs.h  iconv.h  ieeefp.h  ifaddrs.h  inttypes.h  iso646.h  kvm.h  langinfo.h  (+72 more)
kernel/: Makefile  assert.h  build  clock.c  clock.h  config.h  const.h  cpulocals.c  cpulocals.h  debug.c  debug.h  dummy.c  exception.c  extract-errno.sh  extract-mfield.sh  extract-mtype.sh  glo.h  i8259.c  interface.h  interrupt.c  ipc.h  kernel.h  klib.s  klib386.s  klib88.s  klibc.c  kprintf.c  main.c  memory.c  misc.c  mpx.s  mpx386.s  mpx88.s  pci.c  pci_table.c  perf.h  priv.h  proc.c  proc.h  profile.c  (+20 more)
lib/: Makefile  Makefile.ack.inc  Makefile.gnu.inc  Makefile.in  Makefile.inc  README  ack_build.sh  bumpversion  checkoldver  checkver  checkvers  clang_build.sh  elf_build.sh  elf_build_base.sh  generate.sh  generateasm.mk  gnu_build.sh
lib/librumpuser/: Makefile  configure  configure.ac  rumpfiber.c  rumpfiber.h  rumpfiber_bio.c  rumpfiber_sp.c  rumpuser.c  rumpuser_bio.c  rumpuser_component.c  rumpuser_component.h  rumpuser_config.h.in  rumpuser_daemonize.c  rumpuser_dl.c  rumpuser_errtrans.c  rumpuser_file.c  rumpuser_int.h  rumpuser_mem.c  rumpuser_port.h  rumpuser_pth.c  rumpuser_pth_dummy.c  rumpuser_random.c  rumpuser_sigtrans.c  rumpuser_sp.c  shlib_version  sp_common.c
lib/librumpuser/build-aux/: config.sub
libexec/: Makefile  Makefile.inc
man/: Makefile
minix/: Makefile  Makefile.fetchgnu  Makefile.inc
nbsd_include/: Makefile  a.out.h  atomic.h  cdbr.h  cdbw.h  complex.h  cpio.h  ctype.h  dirent.h  disktab.h  err.h  errno.h  fenv.h  fmtmsg.h  fnmatch.h  fts.h  getopt.h  glob.h  grp.h  ieeefp.h  inttypes.h  libgen.h  limits.h  link_aout.h  math.h  memory.h  minix-port.patch  mpool.h  netconfig.h  netdb.h  netgroup.h  nl_types.h  nlist.h  nsswitch.h  paths.h  pwd.h  randomid.h  ranlib.h  regexp.h  res_update.h  (+17 more)
releasetools/: Makefile  applywhitelist.sh  arm_sdimage.sh  arm_sdimage_omap.sh  arm_sdimage_rpi.sh  build_all.sh  checkout_repo.sh  cmdline.txt  fetch.functions  fetch_syslinux.sh  fetch_u-boot.sh  gen_cmdline.txt.sh  gen_uEnv.txt.sh  generate_gold_plugin.sh  image.defaults  image.functions  minix.txt  mkboot  nbsd_diff.sh  nbsd_ports  netbsd-resync.sh  netbsd2minix.sh  packages.install  pkgsrc_cdimage.sh  placeprograms.sh  release.functions  release.sh  sort_set.pl  sort_set.sh  tell_config  uEnv.txt  x86_cdimage.sh  x86_hdimage.sh  x86_pxeimage.sh  x86_ramimage.sh  x86_usbimage.sh
sbin/: Makefile  Makefile.inc
servers/: Makefile  Makefile.inc
share/: Makefile  Makefile.inc
sys/: Makefile  stdlib.h
test/: Makefile  common.c  common.h  magic.h  mod.c  run  run-bench  sh1.sh  sh2.sh  t10a.c  t11a.c  t11b.c  t40a.c  t40b.c  t40c.c  t40d.c  t40e.c  t40f.c  t40g.c  t60b.c  t67a.c  t67b.c  test1.c  test10.c  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c  test17.c  test18.c  test19.c  test2.c  test20.c  test21.c  test22.c  test23.c  test24.c  test25.c  (+73 more)
tests/: Makefile  Makefile.inc  h_macros.h
tools/: Makefile  Makefile.gmakehost  Makefile.gnuhost  Makefile.gnuwrap  Makefile.host  Makefile.nbincludes  README  chrootmake.sh  headerlist  issue.install  mkboot  mkheaderlist.sh  nbsd.config  nbsd_diff.sh  nbsd_ports  package_sources.install  packages.install  release.functions  release.sh  tell_config  update_bootcfg.sh
tools/compat/: Makefile  README  cdbr.h  cdbw.h  compat_defs.h  compat_getopt.h  compat_pwd.h  configure  configure.ac  db.h  defs.mk.in  dprintf.c  fgetln.c  fpurge.c  fts.h  getline.c  getmode.c  glob.h  issetugid.c  lchflags.c  lchmod.c  lchown.c  md2.h  md4.h  md5.h  mpool.h  nbtool_config.h.in  ndbm.h  nl_types.h  pread.c  putc_unlocked.c  pwrite.c  rmd160.h  setenv.c  setgroupent.c  setpassent.c  setprogname.c  sha1.h  sha2.h  snprintf.c  (+2 more)
tools/compat/crypto/: rmd160.h  sha2.h
tools/compat/dev/: clock_subr.h
tools/compat/fs/msdosfs/: bootsect.h  bpb.h  denode.h  direntry.h  fat.h  msdosfsmount.h
tools/compat/sys/: null.h  queue.h  rmd160.h  sha1.h  sha2.h  verified_exec.h
tools/compat/ufs/ffs/: ffs_extern.h  fs.h
tools/compat/ufs/ufs/: dinode.h  dir.h  quota.h  ufs_bswap.h
tools/host-mkdep/: Makefile  configure  configure.ac  host-mkdep.in
tools/make/: Makefile.regen  buildmake.sh.in  configure  configure.ac
usr.bin/: Makefile  Makefile.inc
usr.sbin/: Makefile  Makefile.inc
(+24078 files in other folders)
